--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: Lin Gao
-bio: seasoned programmer, data scientist in training
+bio: algorithm researcher, programmer and data scientist
 
 # twitter summary info
 description: A blog about technology and stuff related
@@ -22,7 +22,7 @@ url: https://koppl.in/indigo
 permalink: /:title/
 
 # To enable google analytics, supply your token below
-# analytics-google: 'UA-MYANALYTICS'
+analytics-google: 'UA-106134829-1'
 
 # To enable piwik tracking, supply your url & site ID below
 # analytics-piwik-url: 'piwik.my-host.com'
@@ -39,7 +39,7 @@ disqus:
 # google: mygoogle
 # instagram: myinstagram
 # pinterest: mypinterest
-# linkedin: mylinkedin
+linkedin: https://www.linkedin.com/in/lin-gao-53b01b29 
 # youtube: myyoutube
 # spotify: myspotify
 github: gauss1986
@@ -50,20 +50,20 @@ github: gauss1986
 # medium: medium
 # vimeo: myvimeo
 # lanyrd: mylanyrd
-email: lingao.gao@mai.utoronto.ca
+email: lingao.gao@mail.utoronto.ca
 
 authors:
     Lin Gao:
         name: Lin Gao
-        bio: A Man who travels the world eating noodles
+        bio: A Man tired of travel
         external-image: false
         picture: assets/images/profile.jpg
-        twitter: johndoe
+        #twitter: johndoe
 
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
 # normal = 560px / large = 810px
-width: normal
+width: large
 
 # if you don't need pagination, comment the *paginate* configs below
 # paginate: 5
