--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ resume: true
 resume-external: false
 resume-url: assets/cv_data.pdf
 
-url: https://gauss1986.github.io
+url: https://lingao.ca
 # your url: http://USERNAME.github.io
 
 permalink: /:title/
