--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: Lin Gao
-bio: algorithm researcher, programmer and data scientist
+bio: algorithm researcher and data scientist
 
 # twitter summary info
 description: A blog about technology and stuff related
