--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ blog: false
 read-time: false
 
 # do you want to show the "tags" inside the posts?
-show-tags: false
+show-tags: true
 
 # related posts inside a post?
 related: true
