--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ analytics-google: 'UA-106134829-1'
 # if you don't want comments in your posts, leave categories empty
 disqus:
   shortname: mydisqus # enter this from your disqus account
-  categories: [] # only show disqus for posts that have these categories
+  categories: [project] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
 # facebook: myfacebook
